--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,10 @@
         <div id="react-root"></div>
 
         <!-- Dependencies -->
-        <script src="./node_modules/react/dist/react.js"></script>
-        <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+        <script src="react.js"></script>
+        <script src="react-dom.js"></script>
 
         <!-- Main -->
-        <script src="./dist/client.bundle.js"></script>
+        <script src="bundle.js"></script>
     </body>
 </html>
